[package]
name = "Plume"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
mysql = {version = "26.0.0", features = ["chrono"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
